src/test/java/org/parseerror/SpringJsfExampleApplicationTests.java
package org.parseerror;

import org.junit.Test;
import org.junit.runner.RunWith;
import org.springframework.boot.test.context.SpringBootTest;
import org.springframework.test.context.junit4.SpringRunner;
import org.springframework.test.context.web.WebAppConfiguration;

@RunWith(SpringRunner.class)
@SpringBootTest(classes = SpringJsfExampleApplication.class)
@WebAppConfiguration
public class SpringJsfExampleApplicationTests {

    @Test
    public void contextLoads() {
    }

}
